--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,17 +8,11 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="7">Smoke Suite</th></tr>
-<tr><td><a href="#t0">API test run group 2</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">5,439</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">API test run group 1</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">6,347</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num">11,786</th><th colspan="2"></th></tr>
+<tr><th colspan="7">Default suite</th></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">13,688</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Smoke Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">API test run group 2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.APITest.tests.SamplePostRequest</td><td><a href="#m0">s200_RegisterTokenReturned</a></td><td rowspan="1">1545356026064</td><td rowspan="1">4208</td></tr><tr class="passedeven"><td><a href="#m1">s400_MissingEmailField_ErrorReturned</a></td><td rowspan="1">1545356030288</td><td rowspan="1">1094</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">API test run group 1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.APITest.tests.SampleAPITests</td><td><a href="#m2">s200_Get_PComments</a></td><td rowspan="1">1545356025992</td><td rowspan="1">5062</td></tr><tr class="passedeven"><td><a href="#m3">s200_Get_WeatherInfoByZipcode</a></td><td rowspan="1">1545356031067</td><td rowspan="1">1226</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">com.UITest.tests.LoginTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1548000869320</td><td rowspan="1">7158</td></tr></tbody>
 </table>
-<h2>API test run group 2</h2><h3 id="m0">com.APITest.tests.SamplePostRequest#s200_RegisterTokenReturned</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>token</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.APITest.tests.SamplePostRequest#s400_MissingEmailField_ErrorReturned</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>Missing password</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>API test run group 1</h2><h3 id="m2">com.APITest.tests.SampleAPITests#s200_Get_PComments</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.APITest.tests.SampleAPITests#s200_Get_WeatherInfoByZipcode</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.UITest.tests.LoginTest#loginTest</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr><tr class="param stripe"><td>automationtest@sumoscheduler.com</td><td>mypassword1</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
