--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be83e4">  <td>18/12/20 20:19:39</td>   <td>0</td> <td title="&gt;&gt;APITestBase.setAPITestConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">&gt;&gt;setAPITestConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/12/20 20:19:39</td>   <td>37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">&gt;&gt;getRestCallConfig</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>18/12/20 20:19:39</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleAPITests.s200_Get_PComments()[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">s200_Get_PComments</td> 
-  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/12/20 20:19:44</td>   <td>5019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/12/20 20:19:44</td>   <td>5078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">&gt;&gt;getRestCallConfig</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="83a2f9">  <td>18/12/20 20:19:44</td>   <td>5078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleAPITests.s200_Get_WeatherInfoByZipcode()[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">s200_Get_WeatherInfoByZipcode</td> 
-  <td>main@540642172</td>   <td></td> </tr>
-<tr bgcolor="be83e4">  <td>18/12/20 20:19:46</td>   <td>6350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SampleAPITests@56ac3a89]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@540642172</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/01/20 11:14:23</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforSuite()[pri:0, instance:com.UITest.tests.LoginTest@5649fd9b]">&gt;&gt;beforSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/01/20 11:14:23</td>   <td>85</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.String)[pri:0, instance:com.UITest.tests.LoginTest@5649fd9b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/01/20 11:14:29</td>   <td>5784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.loginTest(java.lang.String, java.lang.String)[pri:0, instance:com.UITest.tests.LoginTest@5649fd9b]">loginTest</td> 
+  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/01/20 11:14:36</td>   <td>12948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.UITest.tests.LoginTest@5649fd9b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
 </table>
