updating data provider

--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fa7d9b">  <td>19/02/09 08:52:01</td>   <td>0</td> <td title="&gt;&gt;APITestBase.setAPITestConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">&gt;&gt;setAPITestConfig</td> 
+<tr bgcolor="fa7d9b">  <td>19/02/13 16:49:56</td>   <td>0</td> <td title="&gt;&gt;APITestBase.setAPITestConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;setAPITestConfig</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/09 08:52:01</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
+<tr bgcolor="fa7d9b">  <td>19/02/13 16:49:56</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/02/09 08:52:01</td>   <td>32</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleAPITests.s200_Get_PComments()[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">s200_Get_PComments</td> 
+<tr bgcolor="bd7b6a">  <td>19/02/13 16:49:56</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SamplePostRequest.s200_RegisterTokenReturned(java.lang.String)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">s200_RegisterTokenReturned</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/09 08:52:05</td>   <td>3874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:00</td>   <td>3509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/09 08:52:05</td>   <td>3878</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
+<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:00</td>   <td>3521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/02/09 08:52:05</td>   <td>3879</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SampleAPITests.s200_Get_WeatherInfoByZipcode()[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">s200_Get_WeatherInfoByZipcode</td> 
+<tr bgcolor="bd7b6a">  <td>19/02/13 16:50:00</td>   <td>3521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SamplePostRequest.s400_MissingEmailField_ErrorReturned(java.lang.String)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">s400_MissingEmailField_ErrorReturned</td> 
   <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/09 08:52:06</td>   <td>4937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SampleAPITests@ff5b51f]">&lt;&lt;afterMethod</td> 
+<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:01</td>   <td>4655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&lt;&lt;afterMethod</td> 
 <td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
 </table>
