--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,18 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="fa7d9b">  <td>19/02/13 16:49:56</td>   <td>0</td> <td title="&gt;&gt;APITestBase.setAPITestConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;setAPITestConfig</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/13 16:49:56</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/02/13 16:49:56</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SamplePostRequest.s200_RegisterTokenReturned(java.lang.String)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">s200_RegisterTokenReturned</td> 
-  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:00</td>   <td>3509</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:00</td>   <td>3521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;APITestBase.getRestCallConfig()[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&gt;&gt;getRestCallConfig</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="bd7b6a">  <td>19/02/13 16:50:00</td>   <td>3521</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SamplePostRequest.s400_MissingEmailField_ErrorReturned(java.lang.String)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">s400_MissingEmailField_ErrorReturned</td> 
-  <td>main@1604125387</td>   <td></td> </tr>
-<tr bgcolor="fa7d9b">  <td>19/02/13 16:50:01</td>   <td>4655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;APITestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.APITest.tests.SamplePostRequest@ff5b51f]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@1604125387</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/02/21 20:25:11</td>   <td>0</td> <td title="&gt;&gt;TestBase.beforSuite()[pri:0, instance:com.UITest.tests.LogInTestV2@5649fd9b]">&gt;&gt;beforSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/02/21 20:25:11</td>   <td>60</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBase.beforeMethod(java.lang.String)[pri:0, instance:com.UITest.tests.LogInTestV2@5649fd9b]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="bd7b6a">  <td>19/02/21 20:25:21</td>   <td>9668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LogInTestV2.logInV2(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.UITest.tests.LogInTestV2@5649fd9b]">logInV2</td> 
+  <td>main@25548982</td>   <td></td> </tr>
+<tr bgcolor="fcbaf1">  <td>19/02/21 20:25:29</td>   <td>17616</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.afterMethod(org.testng.ITestResult)[pri:0, instance:com.UITest.tests.LogInTestV2@5649fd9b]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@25548982</td>   <td></td> </tr>
 </table>
